sample template load in method sample

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 		<title>battle-app</title>
 	</head>
 	<body>
+	<!-- <script type="text/x-template" id="game-control-template">
+		<div class="c-controller--btn c-controller--btn__attack">{{attack}}</div>
+		<div class="c-controller--btn c-controller--btn__blast">{{blast}}</div>
+		<div class="c-controller--btn c-controller--btn__heal">{{heal}}</div>
+		<div class="c-controller--btn c-controller--btn__surrender">{{surrender}}</div>
+	</script> -->
+		
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
+
 		
 	</body>
 </html>
